--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div id="topbar">
       <p id="full">Cresent - Junction Portfolio</p>
       <p id="mini">Cresent Portfolio</p>
-      <a id="download" href="./Cresent - Junction Portfolio.pdf">Download</a>
+      <a id="download" href="./Cresent - Junction Portfolio.pdf" download>Download</a>
     </div>
     <div id="images">
       <div id="image" style="background-image: url('./images/Page 1.webp');">
