--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Cresent - Junction Portfolio">
+    <meta property="og:description" content="Illuminating the night sky, like a cresent moon.">
+    <meta property="og:image" content="./images/Page 1.webp">
+    <meta property="og:url" content="https://cresent.team">
+
     <meta name="theme-color" content="#f5f4f7">
     <link rel="canonical" href="https://cresent.team">
     <title>Cresent - Junction Portfolio</title>
+    <meta name="description" content="Illuminating the night sky, like a cresent moon.">
 
     <style>
       @import url('https://fonts.2w.vc/suit/static/font.css');
