--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Cresent - Junction Portfolio">
     <meta property="og:description" content="Illuminating the night sky, like a cresent moon.">
-    <meta property="og:image" content="./images/preview.png">
+    <meta property="og:image" content="/images/preview.png">
     <meta property="og:url" content="https://cresent.team">
 
     <meta name="theme-color" content="#f5f4f7">
