--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:image" content="/images/preview.png">
     <meta property="og:url" content="https://cresent.team">
 
+    <meta name="twitter:card" content="summary_large_image">
+
     <meta name="theme-color" content="#f5f4f7">
     <link rel="canonical" href="https://cresent.team">
     <title>Cresent - Junction Portfolio</title>
