--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
 
-    <meta name="theme-color" content="#f5f4f7">
+    <meta name="theme-color" content="#524B9B">
     <link rel="canonical" href="https://cresent.team">
     <title>Cresent - Junction Portfolio</title>
     <meta name="description" content="Illuminating the night sky, like a cresent moon.">
